--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.3.1",
@@ -15,16 +14,12 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "commitlint": "^19.8.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "husky": "^9.1.7",
     "typescript": "^5"
   }
 }
