--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "tsc && mkdir -p api && cp -r dist/src/* api/",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev"
