--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.7"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.7",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
