--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
+    "flowbite-react": "^0.11.7",
     "formik": "^2.4.6",
     "next": "15.3.1",
     "postcss": "^8.5.3",
