--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -21,9 +21,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
