--- a/finpro-web/Dockerfile
+++ b/finpro-web/Dockerfile
@@ -1,13 +1,22 @@
-FROM node:20-alpine
+# __FOR DEVELOPMENT PURPOSES__ 
 
+# Base Image: Where our app will running
+FROM node:20
+
+# Set Working Directory: Where our app will be placed
 WORKDIR /app
 
-COPY package*.json ./
+# Copy `package.json` into Working Directory
+COPY package.json ./
+
+# Install Dependencies
 RUN npm install
 
+# Copy All File(s) into Working Directory
 COPY . .
-RUN npm run build
 
+# Following Port for Next.js
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# Command to Run the App in Development Mode
+CMD ["npm", "run", "dev"]
