--- a/finpro-api/.env.development
+++ b/finpro-api/.env.development
@@ -1,3 +1,12 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root:abc12345@localhost:3306/test-db"
+
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://postgres.gydddahgydnpngkvggpz:jcwd3202@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# Direct connection to the database. Used for migrations
+DIRECT_URL="postgresql://postgres.gydddahgydnpngkvggpz:jcwd3202@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+
+TRANSPORTER_MAILER_USER="finalproject.jcwd3202@gmail.com"
+
+TRANSPORTER_MAILER_APP_PASS="asom yaqw xlfo yvom"
