--- a/finpro-api/tsconfig.json
+++ b/finpro-api/tsconfig.json
@@ -7,5 +7,12 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
+  },
+  "include": ["**/*.ts"],
+  "ts-node": {
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 }
