--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8001:8000"
     environment:
       - NODE_ENV=development
+      - WATCHPACK_POLLING=true
     volumes:
       - ./finpro-api:/app
       - /app/node_modules
