--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   api:
     build: ./finpro-api
@@ -8,6 +6,7 @@ services:
     environment:
       - NODE_ENV=development
       - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
     volumes:
       - ./finpro-api:/app
       - /app/node_modules
@@ -19,6 +18,9 @@ services:
       - "3001:3000"
     environment:
       - NODE_ENV=development
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+      - FAST_REFRESH=true
     volumes:
       - ./finpro-web:/app
       - /app/node_modules
