--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.11.7",
     "formik": "^2.4.6",
     "next": "15.3.1",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
