--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc && mkdir -p api && cp -r dist/src/* api/",
+    "build": "prisma generate &&tsc && mkdir -p api && cp -r dist/src/* api/",
+    "vercel-bulid": "prisma generate && tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate:dev": "set PGOPTIONS='--statement_timeout=30000' && dotenv -e .env.development -- npx prisma migrate dev",
@@ -19,7 +20,8 @@
     "prisma:generate": "dotenv -e .env.development -- npx prisma generate",
     "prisma:format": "dotenv -e .env.development -- npx prisma format",
     "prisma:push": "dotenv -e .env.development -- npx prisma db push",
-    "prisma:seed": "dotenv -e .env.development -- npx prisma db seed"
+    "prisma:seed": "dotenv -e .env.development -- npx prisma db seed",
+    "postinstall": "prisma generate && tsc"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
