--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.25.1",
     "lint-staged": "^15.5.1",
     "nodemon": "^3.1.10",
