--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "husky": "^9.1.7"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "express-validator": "^7.2.1",
     "leaflet": "^1.9.4",
     "react-leaflet": "^5.0.0"
   }
