--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
