--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.9.0",
     "flowbite-react": "^0.11.7",
     "formik": "^2.4.6",
+    "leaflet": "^1.9.4",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.7",
     "yup": "^1.6.1",
