--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -41,7 +41,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -50,6 +50,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "commitizen": "^4.3.1",
