--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "flowbite-react": "^0.11.7",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
