--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commitlint": "commitlint --edit",
-    "prepare": "husky install",
+    "prepare": "husky",
      "build": "next build"
   },
   "keywords": [],
@@ -16,20 +16,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@types/leaflet": "^1.9.18",
-    "@types/multer": "^1.4.13",
     "husky": "^9.1.7"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.9.1",
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "axios": "^1.9.0",
-    "bcrypt": "^6.0.0",
-    "express-validator": "^7.2.1",
-    "leaflet": "^1.9.4",
-    "lodash.debounce": "^4.0.8",
-    "next-auth": "^4.24.11",
-    "react-leaflet": "^5.0.0"
   }
 }
