--- a/finpro-api/tsconfig.json
+++ b/finpro-api/tsconfig.json
@@ -9,7 +9,8 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "__mocks__/*": ["__mocks__/*"]
     }
   },
   "include": ["**/*.ts"],
