--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -7,14 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "flowbite-react patch"
+    "postinstall": "flowbite-react patch",
+    "test": "jest"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@types/testing-library__react": "^10.2.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "flowbite-react": "^0.11.7",
     "formik": "^2.4.6",
+    "jest": "^30.1.2",
+    "jest-environment-jsdom": "^30.1.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "next": "15.3.1",
@@ -26,11 +31,13 @@
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.7",
+    "ts-jest": "^29.4.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jest": "^30.0.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
