--- a/finpro-api/package.json
+++ b/finpro-api/package.json
@@ -68,6 +68,7 @@
     "prisma": "^6.7.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   },
   "config": {
