--- a/finpro-api/vercel.json
+++ b/finpro-api/vercel.json
@@ -2,18 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["src/**"],
-        "NODE_OPTIONS": "-r tsconfig-paths/register"
-      }
+      "src": "dist/src/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts"
+      "dest": "dist/src/index.js"
     }
   ]
 }
