--- a/finpro-api/vercel.json
+++ b/finpro-api/vercel.json
@@ -1,11 +1,18 @@
 {
-  "outputDirectory": "dist",
-  "buildCommand": "npm run vercel-build",
-  "framework": "express",
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["src/**"]
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/src/index.js"
+      "dest": "src/index.ts"
     }
   ]
 }
