--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -11,17 +11,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.7",
     "@testing-library/jest-dom": "^6.8.0",
     "@types/testing-library__react": "^10.2.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "flowbite-react": "^0.11.7",
     "formik": "^2.4.6",
     "jest": "^30.1.2",
     "jest-environment-jsdom": "^30.1.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.542.0",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
@@ -30,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.7",
     "ts-jest": "^29.4.1",
     "yup": "^1.6.1",
@@ -46,6 +52,7 @@
     "daisyui": "^5.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
