test: add cypress test for displyaed product in landing page

--- a/finpro-web/package.json
+++ b/finpro-web/package.json
@@ -27,7 +27,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
-    "next": "15.3.1",
+    "next": "^15.5.2",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -43,12 +43,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/cypress": "^10.1.0",
     "@types/jest": "^30.0.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cypress": "^15.1.0",
     "daisyui": "^5.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
